<resources>
    <string name="app_name">化小秘</string>
    <string name="mine">我的</string>
    <string name="classtable">课程表</string>
    <string name="plan">计划</string>
    <string name="study">学习</string>
    <string name="chart">统计</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todoName">计划名称</string>
    <string name="details">具体事项</string>
    <string name="SavedData">MyData</string>>
    <string name="TitleInput">titleInput</string>
    <string name="DetailsInput">detailsInput</string>
    <string name="encourage">Dont miss any</string>
    <string name="Events">Events!</string>
    <string name="InfromHead">计划内容</string>
    <string name="login">点击登录</string>
    <string name="delete">删除</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="Username">用户名</string>
    <string name="register">注册</string>
    <string name="EndDate">完成日期</string>
    <string name="EndTime">完成时间</string>
    <string name="beginTime">开始时间</string>
    <string name="exercise">锻炼</string>
    <string name="sleep">休息</string>
    <string name="work">工作</string>
    <string name="logout">注销</string>
    <string name="exit">退出</string>
    <string name="Register2">没有账号？立即注册</string>
    <string name="settings">设置</string>
    <string name="frequency">重复</string>
    <string name="AppName">化小秘</string>
    <string name="week">第几周</string>
    <string name="Monday">周一</string>
    <string name="Tuesday">周二</string>
    <string name="Wednesday">周三</string>
    <string name="Thursday">周四</string>
    <string name="Friday">周五</string>
</resources>